# my-cpp-cmake-sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test.yaml  metrics-analysis.yaml
cmake/: cpplint.cmake  metrixpp.cmake
examples/: CMakeLists.txt  main.cpp
include/mylib/: mylib.hpp
lib/mylib/: CMakeLists.txt  mylib.cpp
tests/: CMakeLists.txt  unit-test.cpp
